# hime

./: .gitignore  CMakeLists.txt
menu/: hime-setup.desktop
